Completed Body Mage Quest

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2379,8 +2379,8 @@
                           <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Sash_of_the_Rodent.png" alt="Sash of the Rodent" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Sash_of_the_Rodent_Stats.png' alt='Sash of the Rodent Stats'>">
                           <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Dull_Gemed_Staff.png" alt="Dull Gemed Staff" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Dull_Gemed_Staff_Stats.png' alt='Dull Gemed Staff Stats'>">
                           <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Amulet_of_Minor_Nature.png" alt="Amulet of Minor Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Amulet_of_Minor_Nature_Stats.png' alt='Amulet of Minor Nature Stats'>">
-                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Nature.png" alt="Rune of Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Items/Rune_of_Nature_8.png' alt='Nature Runes'>">
-                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Items/Gold_335.png' alt='Gold 335'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Nature.png" alt="Rune of Body" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Weapons/Rune_of_Nature_8.png' alt='Rune of Nature'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Items/Gold_185.png' alt='Gold 185'>">
                         </td>                        
                   </table>
                   <table class="table table-sm table-bordered text-center">
@@ -2402,25 +2402,25 @@
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Simple Wooden Wand / Rune of Nature</span></li>                            
                         </ul>
                         <hr>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Nature spells</span><span class="orange">, Venture forth and gain experience with your crossbow.</span>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Nature spells</span><span class="orange">, Venture forth and gain experience in the Magic Class of Nature.</span>
                     <ul>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in Thrown Weapons</span> <span class="ml-2 green">10 Gold / Rune of Nature</span></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in Thrown Weapons</span> <span class="ml-2 green">Sash of the Rodent / Rune of Nature</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in Thrown Weapons</span> <span class="ml-2 green">25 Gold / Rune of Nature</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in Thrown Weapons</span> <span class="ml-2 green">50 Gold / Rune of Nature</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in Thrown Weapons</span> <span class="ml-2 green">100 Gold / Rune of Nature</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in Thrown Weapons</span> <span class="ml-2 green">Dull Gemed Staff / Rune of Nature</span></li></li>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in Thrown Weapons</span> <span class="ml-2 green">Amulet of Minor Nature / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in the Magic Class of Nature</span> <span class="ml-2 green">10 Gold / Rune of Nature</span></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in the Magic Class of Nature</span> <span class="ml-2 green">Sash of the Rodent / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in the Magic Class of Nature</span> <span class="ml-2 green">25 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in the Magic Class of Nature</span> <span class="ml-2 green">50 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in the Magic Class of Nature</span> <span class="ml-2 green">100 Gold / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in the Magic Class of Nature</span> <span class="ml-2 green">Dull Gemed Staff / Rune of Nature</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in the Magic Class of Nature</span> <span class="ml-2 green">Amulet of Minor Nature / Rune of Nature</span></li></li>
                       </ul>
                   </p>
                   <p>
                     
                     <br>
-                    <span class="green">QUEST UPDATE:</span><span class="red"> Weapons Training - Thrown</span><span class="orange">, Return to the Trainer for your next assignment.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Weapons Training - Nature Spells</span><span class="orange">, Return to the Trainer for your next assignment.</span>
                   </p>
                   <p>
                     <span class="light-red">Nature Mage Trainer</span> will welcome you back and for accomplishing the task at hand. He gives you a reward for your efforts.
-                    You have received all the trainging he has to offer. 
+                    You have received all the training he has to offer. 
                   <br>
                   You have completed your training in Nature Magic.
                   </p>
@@ -2433,6 +2433,93 @@
             <!-- End of Nature Mage Trainer  -->
 
               <div class="line"></div>
+            <!-- Start of Body Mage Trainer  -->
+            <div class="card bg-main half-width mb-5">
+              <div class="card-header">
+                <h2 id="bodyMageTrainer" class="anchor text-center">Body Spells</h2>
+              </div>
+              <div>
+                <div class="card-body">
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Difficulty</th>
+                        <th>Skills</th>
+                      </tr>                              
+                      </thead>    
+                      <tr>
+                        <td>Apprentice</td>
+                        <td>Combat</td>
+                      </tr>
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>NPC Quest Start</th>
+                        <th>Reward</th>
+                      </thead>    
+                      </tr>
+                      <tr>
+                        <td>Body Mage Trainer</td> 
+                        <td>
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Simple_Wooden_Wand.png" alt="Simple Wooden Wand" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Simple_Wooden_Wand_Stats.png' alt='Simple Wooden Wand Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Sash_of_Lesser_Healing.png" alt="Sash of Lesser Healing" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Sash_of_Lesser_Healing_Stats.png' alt='Sash of Lesser Healing'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Dull_Gemed_Staff.png" alt="Dull Gemed Staff" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Weapons/Dull_Gemed_Staff_Stats.png' alt='Dull Gemed Staff Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Amulet_of_Minor_Body.png" alt="Amulet of Minor Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Amulet_of_Minor_Body_Stats.png' alt='Amulet of Minor Body Stats'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Body.png" alt="Rune of Nature" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Weapons/Rune_of_Body_8.png' alt='Rune of Body'>">
+                          <img class="thumbnail-img" src="Images/Valinor/Items/Items/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-img' src='Images/Valinor/Items/Items/Gold_185.png' alt='Gold 185'>">
+                        </td>                        
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Quest Stages</th>
+                      </tr>
+                    </thead>
+                    <tr>
+                      <td>7</td>
+                    </tr>
+                  </table>
+                  <hr>
+                  <p class="clearfix">
+                    <img class="npc-img" src="Images/Valinor/NPCS/Body_Mage_Trainer.png"alt="Body Mage Trainer">
+                    Speak to <span class="light-red">Body Mage Trainer</span>, He will give you a <span class="light-green">Simple Wooden Wand</span> to complete the task to gain experience by slaying beasts and foul creatures, then return to be rewarded.
+                    <hr>  
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Simple Wooden Wand / Rune of Body</span></li>                            
+                        </ul>
+                        <hr>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Weapons Training - Body spells</span><span class="orange">, Venture forth and gain experience in the magic class of Body.</span>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">First task Gain 500 exp in the Magic Class of Body</span> <span class="ml-2 green">10 Gold / Rune of Body</span></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Second task Gain 700 exp in the Magic Class of Body</span> <span class="ml-2 green">Sash of the Rodent / Rune of Body</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Third task Gain 900 exp in the Magic Class of Body</span> <span class="ml-2 green">25 Gold / Rune of Body</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fourth task Gain 1100 exp in the Magic Class of Body</span> <span class="ml-2 green">50 Gold / Rune of Body</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Fifth task Gain 1500 exp in the Magic Class of Body</span> <span class="ml-2 green">100 Gold / Rune of Body</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Sixth task Gain 3000 exp in the Magic Class of Body</span> <span class="ml-2 green">Dull Gemed Staff / Rune of Body</span></li></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2">Seventh task Gain 5000 exp in the Magic Class of Body</span> <span class="ml-2 green">Amulet of Minor Nature / Rune of Body</span></li></li>
+                      </ul>
+                  </p>
+                  <p>
+                    
+                    <br>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Weapons Training - Body Spells</span><span class="orange">, Return to the Trainer for your next assignment.</span>
+                  </p>
+                  <p>
+                    <span class="light-red">Body Mage Trainer</span> will welcome you back and for accomplishing the task at hand. He gives you a reward for your efforts.
+                    You have received all the trainging he has to offer. 
+                  <br>
+                  You have completed your training in Body Magic.
+                  </p>
+                  <p class="mt-4 py-3 text-center quest-complete">
+                  Quest Complete
+                </p>
+                </div>
+              </div>
+            </div>
+            <!-- End of Body Mage Trainer  -->
+
+              <div class="line"></div>  
             <!-- Start of Cooking Trainer  -->
             <div class="card bg-main half-width mb-5">
               <div class="card-header">
