Patch Note Updates

--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date" >FujiQ 12/5/2020</small> <br>
+              <p>
+                Yesterday's patch has been applied to Legends. In addition, both Heroes and Legends received another fix:
+              </p>
+              <ul>
+                <li>Followers can now attack Greater and Younger dragons without being teleported.</li> 
+              </ul>
+            </article>  
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date" >FujiQ 12/4/2020</small> <br>
+              <p>
+                Patch on H to address some PVP issues in regards to summoning totems.
+              </p>
+              <ul>
+                <li>Adjust to Totem of Sabal's Children and Totem of Demonic Control (Not useable on H temporarily)</li>
+                <li>Adjust to Icebane Coldstone's follower spawning mechanic</li>
+                <li>Typo in Adelia Gnobol quest Mauseleum instead of Mausoleum</li>
+                <li>Grammer in Fortity spell "casted" should be "Cast"</li>
+                <li>Grammer/Capitalization in Tserith sys message dialogue</li>                
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date" >FujiQ 11/30/2020</small> <br>
               <p>
                 This is a patch to address some issues that have appeared up since Friday's update.
