Complete Stage 3 of Leather Working Trainer

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2921,10 +2921,26 @@
                     He now wants to see if you can handle tanning. Bring him 10 hides that you have tanned.
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking trainer with 10 hides that you have tanned into leather.</span>
                     <br>
-                      You will have to go out and skin more creatures for more hides. Tanning your hides requires a tanning vat. It can be located underground in the castle. <img class="monster-img" src="" alt="Tanning Vat"> Once you find the tanning vat
+                      You will have to go out and skin more creatures for more hides. Tanning your hides requires a tanning vat. It can be located underground in the castle. <img src="Images/Valinor/TradeSkills/Tanning_Vat.png" alt="Tanning Vat"> Once you find the tanning vat
                       you just need to click on your <span class="light-green">Skinned hide</span> then on the tanning vat to begin tanning your hides. When you have 10 leather you will be updated. 
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 3</h3>
+                  <p class="clearfix">
+                    He now wants to judge your workmanship by making a leather cap.
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Leather Cap.</span>
+                    <br>
+                    Working with leather requires some <span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench"> Once you are at the Leather Workbench 
+                    click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. Click on armour then on the <span class="light-green">Leather Cap</span> <img src="Images/Valinor/TradeSkills/Leather_cap.png" alt="Leather Cap"> to begin crafting.
+                    When you have 1 Leather cap you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Cap</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
