--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2963,6 +2963,23 @@
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
+                  <h3 class="stages">Stage 5</h3>
+                  <p class="clearfix">
+                    <span class="light-red">Leatherworking Trainer's</span> leather leggings are realy worn out. He wants you to make him a new pair. He is to busy with other things at the moment that he has no time to make a new pair. 
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Leather Leggings.</span>
+                    <br>
+                    Same as the stages before you will need your<span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench">  
+                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level 6 and 2 leather to make Leather Leggings. Click on Armor then on the <span class="light-green">Leather Leggings</span> <img src="Images/Valinor/TradeSkills/leather_Leggings" alt="Leather Leggings"> to begin crafting.
+                    When you have 1 Leather Leggings you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Leggings</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
                   
                 </div>
               </div>
