--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2953,7 +2953,7 @@
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Sling.</span>
                     <br>
                     Same as stage 3 you will need your<span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench">  
-                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level 4 to make a Leather Sling. Click on weapons then on the <span class="light-green">Leather Sling</span> <img src="Images/Valinor/TradeSkills/Leather_Sling.png" alt="Leather Sling"> to begin crafting.
+                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level <span class="light-red">4</span> and <span class="light-red">2</span> leather to make a Leather Sling. Click on weapons then on the <span class="light-green">Leather Sling</span> <img src="Images/Valinor/TradeSkills/Leather_Sling.png" alt="Leather Sling"> to begin crafting.
                     When you have 1 Leather Sling you will be updated. 
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Sling</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
@@ -2970,7 +2970,7 @@
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Leather Leggings.</span>
                     <br>
                     Same as the stages before you will need your<span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench">  
-                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level 6 and 2 leather to make Leather Leggings. Click on Armor then on the <span class="light-green">Leather Leggings</span> <img src="Images/Valinor/TradeSkills/leather_Leggings" alt="Leather Leggings"> to begin crafting.
+                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level <span class="light-red">6</span> and <span class="light-red">2</span> leather to make Leather Leggings. Click on Armor then on the <span class="light-green">Leather Leggings</span> <img src="Images/Valinor/TradeSkills/Leather_Leggings.png" alt="Leather Leggings"> to begin crafting.
                     When you have 1 Leather Leggings you will be updated. 
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Leggings</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
