Completed Leatherworking Training

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -2830,7 +2830,7 @@
                     The <span class="light-red">Cooking Trainer's</span> mixing spoon has gone missing. He knows its that greedy goblin <span class="light-red">Frump the Cook</span> that has stolen his mixing spoon. He's always been heavy handed and breaks his own spoons. He suspects that he did it while the guards where enjoying that lovely feast we prepared for them.
                     The guards say that the goblins stooge around in southwestern part of the island in the ruined town of Lanore. When you are ready head to the trap door in Lanore to access the dungeon that houses Frump the Cook.
                     View the map with his location. <img class="npc-img" src="Images/Valinor/Maps/Frump_the_Cook_Location.png" alt="Map of the location of Frump the Cook"> Slay him to find the <span class="light-red">Cooking Trainers</span> mixing spoon.    <br>
-                    <span class="green">QUEST UPDATE: </span><span class="red">Coking Training</span><span class="orange">, Return the mixing spoon to the Cooking Trainer.</span> Return to the <span class="light-red">Cooking Trainer</span> to complete the final task. <br>
+                    <span class="green">QUEST UPDATE: </span><span class="red">Cooking Training</span><span class="orange">, Return the mixing spoon to the Cooking Trainer.</span> Return to the <span class="light-red">Cooking Trainer</span> to complete the final task. <br>
                     He thanks you for all the trouble, though you seem no worse off for it, as all that good food bolstered your strength. 
                   </p> 
                   <hr> 
@@ -2980,6 +2980,25 @@
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
+                  <h3 class="stages">Stage 6</h3>
+                  <p class="clearfix">
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Leatherworking Training</span><span class="orange">, Slay the Goblin Leatherworker and return the stolen skinning knife to the Leatherworking Trainer.</span> 
+                    <img class="npc-img" src="Images/Valinor/Monsters/Goblin_Leatherwoker.png" alt="Goblin Leatherworker"> <br>
+                    The <span class="light-red">Leatherworking Trainer's</span> skinning knife seems to be missing. He has tasked you to find it. The <span class="light-red">goblin leatherworker</span> has once again managed to sneak into town and steal his favorite skinning knife.
+                    The whole grimy lot of them hang out somewhere by the ruined town of Lanore. Follow the road west from the castle until it terminates, you will find their lair.
+                    This map shows the location of the goblin leatherworker . <img class="npc-img" src="Images/Valinor/Maps/Goblin_Leatherworker_Location.png" alt="Map of the location of Goblin Leatherworker"> Slay him to find the <span class="light-red">Leatherworking Trainer's</span> skinning knife.    <br>
+                    <span class="green">QUEST UPDATE: </span><span class="red">Leatherworking Training</span><span class="orange">, Return the skinning knife to the Leatherworking Trainer.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete the final task. <br>
+                    He thanks you for all the trouble, he thought he might never see this again. Hope it wasn't too much trouble for you and you were able to teach those goblins a lesson so they don't  try to steal it again. 
+                  </p> 
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  You have completed your leatherworking training.
+                  <p class="mt-4 py-3 text-center quest-complete">
+                  Quest Complete
+                </p>
                   
                 </div>
               </div>
