Completed Blacksmith Trainer

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3095,8 +3095,8 @@
                     Now let's test your skill at forging. Make him a small dagger forged by your hand.
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 small dagger.</span>
                     <br>
-                    Just like in the last two steps get your ore, turn them in to iron ingots. Now to Iron Forge you need to be next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> then on the iron ingot.
-                    The crafting window will open, you will need 1 iron ingot to make a small dagger. Click on Weapons then find the small dagger. <img src="Images/Valinor/TradeSkills/Small_Dagger.png" alt="Small Dagger"> Once you create the dagger you will be updated.
+                    Just like in the last two steps get your ore, turn them in to iron ingots. Now to Iron Forge you need to be next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
+                    The crafting window will open, you will need <span class="light-red">1</span> iron ingot to make a small dagger. Click on Weapons then find the small dagger. <img src="Images/Valinor/TradeSkills/Small_Dagger.png" alt="Small Dagger"> Once you create the dagger you will be updated.
                     <br>
                       <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Small Dagger</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
                   </p>
@@ -3107,45 +3107,43 @@
                   <hr>
                   <h3 class="stages">Stage 4</h3>
                   <p class="clearfix">
-                    <span class="light-red">Leatherworking Trainer's</span> next task is to help out the rat catcher. The king has sent a rat catcher to clear out the vermin in the cellars, but he was attacked on his long journey here and lost his sling in the scuffle. Your task is to make a new sling for the rat catcher. 
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Sling.</span>
+                    We require some replacement weapons for new recruits. Start by creating a light axe.  
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 Light Axe.</span>
                     <br>
-                    Same as stage 3 you will need your<span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench">  
-                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level <span class="light-red">4</span> and <span class="light-red">2</span> leather to make a Leather Sling. Click on weapons then on the <span class="light-green">Leather Sling</span> <img src="Images/Valinor/TradeSkills/Leather_Sling.png" alt="Leather Sling"> to begin crafting.
-                    When you have 1 Leather Sling you will be updated. 
+                    Same as before get your ore, turn them in to iron ingots. Stand next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
+                    The crafting window will open, you will need to be level <span class="light-red">3</span> and <span class="light-red">2</span> iron ingots to make a Light Axe. Click on Weapons then find the Light Axe. <img src="Images/Valinor/TradeSkills/Light_Axe.png" alt="Light Axe"> Once you create the axe you will be updated. 
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Sling</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Light Axe</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1320</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 5</h3>
                   <p class="clearfix">
-                    <span class="light-red">Leatherworking Trainer's</span> leather leggings are realy worn out. He wants you to make him a new pair. He is to busy with other things at the moment that he has no time to make a new pair. 
+                    Your skills are improving! How would you like to try your hand at making a small mace? 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Leatherworking Training</span><span class="orange">, Return to the Leatherworking Trainer with 1 Leather Leggings.</span>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 Small Mace.</span>
                     <br>
-                    Same as the stages before you will need your<span class="light-green"> leather, leatherworking tools</span>, and be at a leather workbench. <img src="Images/Valinor/TradeSkills/Leather_Workbench.png" alt="Leather Workbench">  
-                    Click on your <span class="light-green">Leatherworking Tools</span> then on the <span class="light-green">leather</span> to activate the crafting window. You will need to be level <span class="light-red">6</span> and <span class="light-red">2</span> leather to make Leather Leggings. Click on Armor then on the <span class="light-green">Leather Leggings</span> <img src="Images/Valinor/TradeSkills/Leather_Leggings.png" alt="Leather Leggings"> to begin crafting.
-                    When you have 1 Leather Leggings you will be updated. 
+                    Same as before get your ore, turn them in to iron ingots. Stand next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
+                    The crafting window will open, you will need to be level <span class="light-red">5</span> and <span class="light-red">2</span> iron ingots to make a Small Mace. Click on Weapons then find the Small Mace. <img src="Images/Valinor/TradeSkills/Small_Mace.png" alt="Small Mace"> Once you create the mace you will be updated. 
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Leather Leggings</span> to complete the quest.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Small Mace</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2887</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 6</h3>
                   <p class="clearfix">
-                    <span class="green">QUEST UPDATE:</span><span class="red"> Leatherworking Training</span><span class="orange">, Slay the Goblin Leatherworker and return the stolen skinning knife to the Leatherworking Trainer.</span> 
-                    <img class="npc-img" src="Images/Valinor/Monsters/Goblin_Leatherwoker.png" alt="Goblin Leatherworker"> <br>
-                    The <span class="light-red">Leatherworking Trainer's</span> skinning knife seems to be missing. He has tasked you to find it. The <span class="light-red">goblin leatherworker</span> has once again managed to sneak into town and steal his favorite skinning knife.
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Blacksmith Training</span><span class="orange">, Slay the Hobgoblin Blacksmith and return the stolen blacksmith hammer to the Blacksmith Trainer.</span> 
+                    <img class="npc-img" src="Images/Valinor/Monsters/Hobgoblin_Blacksmith.png" alt="Hobgoblin Blacksmith"> <br>
+                    The <span class="light-red">Blacksmith Trainer's</span> old blacksmith hammer seems to be missing. Help him recover it from the <span class="light-red">Hobgoblin Blacksmith</span>. 
                     The whole grimy lot of them hang out somewhere by the ruined town of Lanore. Follow the road west from the castle until it terminates, you will find their lair.
-                    This map shows the location of the goblin leatherworker . <img class="npc-img" src="Images/Valinor/Maps/Goblin_Leatherworker_Location.png" alt="Map of the location of Goblin Leatherworker"> Slay him to find the <span class="light-red">Leatherworking Trainer's</span> skinning knife.    <br>
-                    <span class="green">QUEST UPDATE: </span><span class="red">Leatherworking Training</span><span class="orange">, Return the skinning knife to the Leatherworking Trainer.</span> Return to the <span class="light-red">Leatherworking Trainer</span> to complete the final task. <br>
+                    This map shows the location of the Hobgoblin Blacksmith. <img class="npc-img" src="Images/Valinor/Maps/Hobgoblin_Blacksmith_Location.png" alt="Map of the location of Hobgoblin Blacksmith"> Slay him to find the <span class="light-red">Blacksmith Trainer's</span> Blacksmith Hammer.    <br>
+                    <span class="green">QUEST UPDATE: </span><span class="red">Blacksmith Training</span><span class="orange">, Return the Blacksmith Hammer to the Blacksmith Trainer.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete the final task. <br>
                     He thanks you for all the trouble, he thought he might never see this again. Hope it wasn't too much trouble for you and you were able to teach those goblins a lesson so they don't  try to steal it again. 
                   </p> 
                   <hr> 
@@ -3153,7 +3151,7 @@
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
-                  You have completed your leatherworking training.
+                  You have completed your Blacksmith training.
                   <p class="mt-4 py-3 text-center quest-complete">
                   Quest Complete
                 </p>
